--- a/templates/coins.html
+++ b/templates/coins.html
@@ -6,26 +6,27 @@
             <table class="table is-hoverable ">
                 <thead>
                     <tr class="has-text-centered">
-                        <th scope='col'>Logo</th>
-                        <th scope='col'>Name</th>
                         <th scope='col'>Rank</th>
-                        <th scope='col'>Market Cap</th>
+                        <th scope='col'>Logo</th>
+                        <th scope='col'>Coin</th>
                         <th scope='col'>Price</th>
+                        <th scope='col'>Mkt Cap</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% if coins %}
                         {% for i in coins %}
                             <tr class="has-text-centered">
+                                <td>{{i.market_cap_rank}}</td>
                                 <td>
                                     <figure class="image is-32x32">
                                         <img src="{{i.image}}">
                                     </figure>
-                                </td>
-                                <td>{{i.name}}</td>
-                                <td>{{i.market_cap_rank}}</td>
-                                <td>{{i.market_cap}}</td>
+                            </td>
+                                <td style="font-weight:bold">{{i.name}}</td>
                                 <td>{{i.current_price}}</td>
+                                <td>{{i.market_cap}}</td>
+                                
                             </tr>
                         {% endfor %}
                     {% else %}
