--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{% block title %} Crypto App {% endblock title %} Crypto App</title>
+        <title>{% block title %} Crypto App {% endblock title %} </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
@@ -11,8 +11,8 @@
     <body>
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="https://bulma.io">
-                    <img src="/static/images/coingecko.png" alt="coingecko logo" width="40">
+                <a class="navbar-item" href="https://coingecko.com">
+                    <img src="/static/images/coingecko.png" alt="coingecko logo" width="35">
                 </a>
 
                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
