--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
                     <tr class="has-text-centered">
                         <th scope='col'>Rank</th>
                         <th scope='col'>Logo</th>
-                        <th scope='col'>Coin</th>
+                        <th scope='col'>Name</th>
                         <th scope='col'>Price</th>
                         <th scope='col'>Mkt Cap</th>
                     </tr>
@@ -20,12 +20,12 @@
                                 <td>{{i.market_cap_rank}}</td>
                                 <td>
                                     <figure class="image is-32x32">
-                                        <img src="{{i.image}}">
+                                        <img src="{{i.image}}"> 
                                     </figure>
                             </td>
                                 <td style="font-weight:bold">{{i.name}}</td>
-                                <td>{{i.current_price}}</td>
-                                <td>{{i.market_cap}}</td>
+                                <td>${{i.current_price}}</td>
+                                <td>${{i.market_cap}}</td>
                                 
                             </tr>
                         {% endfor %}
@@ -42,7 +42,7 @@
 
 
 
-
+<!--
 {% for obj in coins %}
     <p>
         <img src={{obj.image}} height='70'>
@@ -54,3 +54,4 @@
 {% endfor %}
 
 </div>
+-->
