User authentication done

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class='container has-text-centered'>
         <div class='columns is-mobile is-centered'>
-            <table class="table is-hoverable ">
+            <table class='table is-hoverable'>
                 <thead>
                     <tr class="has-text-centered">
                         <th scope='col'>Rank</th>
