--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 
             <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item">
+                <a class="navbar-item" href="{% url 'home' %}">
                     Home
                 </a>
 
@@ -58,10 +58,10 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button is-primary">
+                        <a class="button is-primary" href="{% url 'signup' %}">
                             <strong>Sign up</strong>
                             </a>
-                            <a class="button is-light">
+                            <a class="button is-light" href="{% url 'login' %}">
                                 Log in
                             </a>
                         </div>
@@ -69,6 +69,13 @@
                 </div>
             </div>
         </nav>
+        <div>            {% if user.is_authenticated %}
+                <p>Hi {{ user.username }}</p>
+                <p><a href="{% url 'logout' %}"</a>Log out</p>
+            {% else %}
+                <p>You are not logged in</p>
+            {% endif %}
+        </div>
 
         <div>
             {% block content %}
