--- a/templates/coin_new.html
+++ b/templates/coin_new.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Add coin</h1>
         <form action="" method="post">{% csrf_token %}
-            {{ form.as_table }}
+            {{ form.as_p }}
             <input type="submit" value="Save">
         </form>
 {% endblock content %}
