--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     </head>
     <body>
+        <div>
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="https://coingecko.com">
@@ -22,37 +23,19 @@
                 </a>
             </div>
 
-            <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
+            <div id="navbarBasicExample" class="navbar-menu" class="navbar-start">
+            
                 <a class="navbar-item" href="{% url 'home' %}">
                     Home
                 </a>
 
-                <a class="navbar-item">
-                    Documentation
+                <a class="navbar-item" href="{% url 'coin_new' %}">
+                    Add Coins
                 </a>
 
-                <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link">
-                        More
-                    </a>
-
-                    <div class="navbar-dropdown">
-                        <a class="navbar-item">
-                            About
-                        </a>
-                        <a class="navbar-item">
-                            Jobs
-                        </a>
-                        <a class="navbar-item">
-                            Contact
-                        </a>
-                        <hr class="navbar-divider">
-                        <a class="navbar-item">
-                            Report an issue
-                        </a>
-                    </div>
-                </div>
+                <a class="navbar-item" href={% url 'coin_user_list' %}>
+                    Portfolio
+                </a> 
             </div>
 
             <div class="navbar-end">
@@ -69,15 +52,13 @@
                 </div>
             </div>
         </nav>
-        <div>            {% if user.is_authenticated %}
+            {% if user.is_authenticated %}
                 <p>Hi {{ user.username }}</p>
-                <p><a href="{% url 'logout' %}"</a>Log out</p>
+                <p><a href="{% url 'logout' %}">Log out</p></a>
             {% else %}
                 <p>You are not logged in</p>
             {% endif %}
-        </div>
 
-        <div>
             {% block content %}
             {% endblock content %}
         </div>
