--- a/templates/coin_new.html
+++ b/templates/coin_new.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <br></br>
     <h1>Add coin</h1>
-        <form action="" method="post">{% csrf_token %}
+        <form action="" method="post">
+            {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="Save">
         </form>
+</div>
+    
 {% endblock content %}
